--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BoolflixDbContextConnection": "Data Source=localhost;Initial Catalog=db-boolflix;Integrated Security=True; Encrypt=false;"
+  }
 }
